--- a/app/views/blogs/_sidebar.html.erb
+++ b/app/views/blogs/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div class="bg_wrap clearfix">
-  <h2>Latest Gadgets</h2>
+  <h2><span>LATEST</span> GADGETS</h2>
   <% @gadgets.each do |gadget| %>
     <div class="gadget_blog clearfix">
       <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>"></a>
@@ -7,10 +7,10 @@
   <% end %>
 </div>
 
-<!-- <div class="bd_wrap">
+<!-- <div class="bd_wrap clearfix">
   <div class="tab-menu-wrap">
     <div class="title-tab-menu">
-      <span>Top 5</span> Promo Codes & Deals
+      <h2><span>Top 5</span> Amazon Deals</h2>
     </div>
     <div class="tab-menu-wp">
       <ul>
@@ -24,87 +24,212 @@
 
         <div class="tab-menu-box clearfix">
           <div class="tab-menu-img">
-           <a href="#n"><img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"></a>
+           <a href="https://amzn.to/2E6Wte6"><img src="https://m.media-amazon.com/images/I/61n7Ho0i9rL._SR400,400_.jpg" alt="True Wireless Earbuds Bluetooth 5.0 DULLA Sweatproof"></a>
           </div>
           <div class="inner">
-            <a href="#n">
-              <p>Aromacare 300ml Essential Oil Diffusers with Color Changing LED Lights, Wood Grain Diffusers for Essential Oils</p>
-              <span>$50.00<em>$100.00</em><span>
-              <address>Take 50% off with promo code: 60OY134F</address>
+            <a href="https://amzn.to/2E6Wte6">
+              <p>True Wireless Earbuds Bluetooth 5.0 DULLA Sweatproof</p>
+              <span>$24.98<em>$36.89</em><span>
+            </a>
+            <address>Code: 30SCQWC9</address>            
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="https://amzn.to/2E361H9"><img src="https://m.media-amazon.com/images/I/71f3jbBwT1L._SR400,400_.jpg" alt="S-ZONE Canvas Travel Toiletry Bag"></a>
+          </div>
+          <div class="inner">
+            <a href="https://amzn.to/2E361H9">
+              <p>S-ZONE Canvas Travel Toiletry Bag</p>
+              <span>$6.49<em>$12.99</em><span>
+            </a>
+            <address>Code: 50ONZXPT</address>            
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="https://amzn.to/2E8MrcD"><img src="https://m.media-amazon.com/images/I/61n7yNis-LL._SR400,400_.jpg" alt="Lovinland Electric Meat Grinder Meat"></a>
+          </div>
+          <div class="inner">
+            <a href="https://amzn.to/2E8MrcD">
+              <p>Lovinland Electric Meat Grinder Meat</p>
+              <span>$49.99<em>$249.99</em><span>
+            </a>
+            <address>Code: 80UP393S</address>            
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="Product_Link"><img src="Product_Image" alt=""></a>
+          </div>
+          <div class="inner">
+            <a href="Product_Link">
+              <p>Product_title</p>
+              <span>$Discount_Price<em>$Original_Price</em><span>
+            </a>
+            <address>Code: Promotion_code</address>            
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="Product_Link"><img src="Product_Image" alt=""></a>
+          </div>
+          <div class="inner">
+            <a href="Product_Link">
+              <p>Product_title</p>
+              <span>$Discount_Price<em>$Original_Price</em><span>
+            </a>
+            <address>Code: Promotion_code</address>            
+          </div>
+        </div>
+        
+        <div class="blog_side_more">
+         <a href="/deals/promo_codes">See More</a>
+        </div>
+
+      </div>
+
+        
+
+      <div class="page1">
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="Product_Link"><img src="Product_Image" alt=""></a>
+          </div>
+          <div class="inner">
+            <a href="Product_Link">
+              <p>Product_title</p>
+              <span>$Discount_Price<em>$Original_Price</em><span>
             </a>
           </div>
         </div>
 
         <div class="tab-menu-box clearfix">
           <div class="tab-menu-img">
-           <a href="#n"><img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"></a>
+           <a href="Product_Link"><img src="Product_Image" alt=""></a>
           </div>
           <div class="inner">
-            <a href="#n">
-              <p>Aromacare 300ml Essential Oil Diffusers with Color Changing LED Lights, Wood Grain Diffusers for Essential Oils</p>
-              <span>$50.00<em>$100.00</em><span>
-              <address>Take 50% off with promo code: 60OY134F</address>
+            <a href="Product_Link">
+              <p>Product_title</p>
+              <span>$Discount_Price<em>$Original_Price</em><span>
             </a>
           </div>
         </div>
 
         <div class="tab-menu-box clearfix">
           <div class="tab-menu-img">
-            <img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+           <a href="Product_Link"><img src="Product_Image" alt=""></a>
           </div>
           <div class="inner">
-            <p>This is Page 1</p>
+            <a href="Product_Link">
+              <p>Product_title</p>
+              <span>$Discount_Price<em>$Original_Price</em><span>
+            </a>
           </div>
         </div>
 
         <div class="tab-menu-box clearfix">
           <div class="tab-menu-img">
-            <img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+           <a href="Product_Link"><img src="Product_Image" alt=""></a>
           </div>
           <div class="inner">
-            <p>This is Page 1</p>
+            <a href="Product_Link">
+              <p>Product_title</p>
+              <span>$Discount_Price<em>$Original_Price</em><span>
+            </a>
           </div>
         </div>
 
         <div class="tab-menu-box clearfix">
           <div class="tab-menu-img">
-            <img src="https://images.unsplash.com/photo-1551866715-a41148565130?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+           <a href="Product_Link"><img src="Product_Image" alt=""></a>
           </div>
           <div class="inner">
-            <p>This is Page 1</p>
+            <a href="Product_Link">
+              <p>Product_title</p>
+              <span>$Discount_Price<em>$Original_Price</em><span>
+            </a>
           </div>
         </div>
+
+        <div class="blog_side_more">
+         <a href="/deals/promo_codes">See More</a>
+        </div>
+
       </div>
 
       <div class="page1">
-
         <div class="tab-menu-box clearfix">
           <div class="tab-menu-img">
-            <img src="">
+           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
           </div>
           <div class="inner">
-            page2
+            <a href="Product_Link">
+              <p>Product_title</p>
+            </a>
           </div>
         </div>
-      </div>
 
-      <div class="page1">
         <div class="tab-menu-box clearfix">
           <div class="tab-menu-img">
-            <img src="">
+           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
           </div>
           <div class="inner">
-            page3
+            <a href="Product_Link">
+              <p>Product_title</p>
+            </a>
           </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
+          </div>
+          <div class="inner">
+            <a href="Product_Link">
+              <p>Product_title</p>
+            </a>
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
+          </div>
+          <div class="inner">
+            <a href="Product_Link">
+              <p>Product_title</p>
+            </a>
+          </div>
+        </div>
+
+        <div class="tab-menu-box clearfix">
+          <div class="tab-menu-img">
+           <a href="Product_Link"><span>70%<em>OFF</em></span></a>
+          </div>
+          <div class="inner">
+            <a href="Product_Link">
+              <p>Product_title</p>
+            </a>
+          </div>
+        </div>
+
+        <div class="blog_side_more">
+         <a href="/deals/promo_codes">See More</a>
         </div>
       </div>
       
+    </div>
   </div>
- </div>
 </div> -->
 
-<div class="bf_wrap">
-  <h2>Latest Featured</h2>
+<div class="bf_wrap clearfix">
+  <h2><span>LATEST</span> FEATURED</h2>
   <% @recommends.each do |recommend| %>
     <div class="inner clearfix">
       <%= link_to (image_tag recommend.re_image), recommend %>
