--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -18,6 +18,178 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="6.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2w4MZLT"><img src="https://m.media-amazon.com/images/I/71Xf5860gRL._SR400,400_.jpg" alt="UDISON Portable Bluetooth Speaker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2w4MZLT">UDISON Portable Bluetooth Speaker, Wireless Louder Speakers V4.2 with Stereo Sound and Bass, Built-in Mic, Handsfree</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.49</span><span class="ori_price">$12.99</span></address>
+      <p><span>Take <strong>50% off at $12.99</strong> with promo code: <strong>50SGXC8W</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2w4MZLT">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="21.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LGhMte"><img src="https://m.media-amazon.com/images/I/51gy+IGgaqL._SR400,400_.jpg" alt="Ipax 6 USB 6 AC Port Power Strip" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LGhMte">Ipax 6 USB 6 AC Port Power Strip with USB Ports, Multi-Port Charger, Charging Station, Surge Protector, 6ft Long Grounded Cord Cable</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.24</span><span class="ori_price">$24.99</span></address>
+      <p><span>Take <strong>15% off at $24.99</strong> with promo code: <strong>15POWERSTRIP</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LGhMte">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="170.10">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LLw6AE"><img src="https://m.media-amazon.com/images/I/61RRlc9vG6L._SR400,400_.jpg" alt="YAMAHA Unified Communications YVC-200 Portable Wireless Bluetooth" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LLw6AE">YAMAHA Unified Communications YVC-200 Portable Wireless Bluetooth USB Conference Speaker with Microphone for Meetings in Huddle Rooms, Home Offices and Travel</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$170.10</span><span class="ori_price">$189.00</span></address>
+      <p><span>Take <strong>10% off at $189.00</strong> with promo code: <strong>10BARSTOOL</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LLw6AE">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="28.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LH2zbp"><img src="https://m.media-amazon.com/images/I/71n89dXNLhL._SR400,400_.jpg" alt="Bluetooth Headphones DULLA True Wireless Noise Cancelling Earphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LH2zbp">Bluetooth Headphones DULLA True Wireless Noise Cancelling Earphones Sweatproof Waterproof with Microphone Earbuds,Compatible with All Smartphones</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.39</span><span class="ori_price">$43.69</span></address>
+      <p><span>Take <strong>35% off at $43.69</strong> with promo code: <strong>35VRO2SO</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LH2zbp">Use Code</a>
+  </div>
+</div>
+
+
+<div class="card clearfix" data-score="35" data-price="31.75">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VDdozX"><img src="https://m.media-amazon.com/images/I/61fAfu0TRuL._SR400,400_.jpg" alt="CHISANA Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VDdozX">CHISANA Wireless Earbuds | Bluetooth Headphones 5.0 w/ QI Wireless 2200mAh Charging Case | 3D Stereo Sound Deep Bass In-Ear HiFi True Wireless Bluetooth Earbuds</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$31.75</span><span class="ori_price">$48.85</span></address>
+      <p><span>Take <strong>35% off at $48.85</strong> with promo code: <strong>354H7P82</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VDdozX">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="18.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Hlgpfn"><img src="https://m.media-amazon.com/images/I/61qDkcMJ8EL._SR400,400_.jpg" alt="Sunrise Alarm Clock" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Hlgpfn">Sunrise Alarm Clock - Wake Up Light,with 7 Colors, Nature Sounds, FM Radio, Snooze Function, Touch Control </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.19</span><span class="ori_price">$25.99</span></address>
+      <p><span>Take <strong>30% off at $25.99</strong> with promo code: <strong>30FCD7HB</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Hlgpfn">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="22.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HkDsa6"><img src="https://m.media-amazon.com/images/I/71dxAta8NDL._SR400,400_.jpg" alt="Max Cases Rugged Laptop Sleeve Notebook Sleeve" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HkDsa6">Max Cases Rugged Laptop Sleeve Notebook Sleeve - MacBook Air 13, MacBook Pro 13, MacBook 12, IPad Pro 12.9, MS Surface Pro 3/4, X2-1012, TP 12.5 - Magnetic Closure</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.49</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>25% off at $29.99</strong> with promo code: <strong>25MAXSLEEVES</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HkDsa6">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W6PkER"><img src="https://m.media-amazon.com/images/I/51sYhuBlWxL._SR400,400_.jpg" alt="Computer Microphone" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W6PkER">Computer Microphone, 3.5mm Condenser Microphone with USB Audio Adapter and Filter, Plug and Play Omnidirectional Microphone </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.99</span><span class="ori_price">$21.99</span></address>
+      <p><span>Take <strong>50% off at $21.99</strong> with promo code: <strong>50WEFU2E</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W6PkER">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="50.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YsREnd"><img src="https://m.media-amazon.com/images/I/61lJjbIlL6L._SR400,400_.jpg" alt="USB C Ethernet Hub" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YsREnd">USB C Ethernet Hub, AZLink 9 in 1 USB Type C Multiport Adapter with HDMI 4K, 3 USB 3.0, USB-C PD Charging Port, Audio/Mic, SD TF Card Reader for MacBook Pro and More</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$50.99</span><span class="ori_price">$59.99</span></address>
+      <p><span>Take <strong>15% off at $59.99</strong> with promo code: <strong>15QG4T67</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YsREnd">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="24.98">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2E6Wte6"><img src="https://m.media-amazon.com/images/I/61n7Ho0i9rL._SR400,400_.jpg" alt="True Wireless Earbuds Bluetooth" /></a>
