--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -370,7 +370,7 @@
 
 /* Begin Blog Detail */
 .blogs{margin:300px 0 100px 0 ;font-family: 'Montserrat', sans-serif;}
-.blogs .blog_body{float:left;width:60%;margin:0 2.5% 0 2.5%;}
+.blogs .blog_body{float:left;width:60%;margin:0 0 0 2.5%;border-right:1px solid #ccc;padding-right:2.5%;}
 .blogs .blog_body img{width:100%;}
 .blogs .blog_body h2{font-family: 'Montserrat', sans-serif;line-height:1.2;}
 .blogs .blog_body .blog2sub_title h2{margin-top:30px;}
@@ -391,7 +391,7 @@
 .blogs .blog_body .blog_ctn .inner{margin-top:10px;}
 .blogs .blog_body .blog_ctn .inner p{margin-bottom:7px;}
 /*Begin blogs_sidebar*/
-.blogs .blog_side{float:left;width:30%;margin:0 2.5% 0 2.5%;padding:0 20px;}
+.blogs .blog_side{float:left;width:30%;margin:0 2.5% 0 2.5%;padding:0 10px;}
 .blogs .blog_side img{width:100%;}
 .blogs .blog_side .inner{font-family: 'Montserrat', sans-serif;margin-bottom:35px;}
 .blogs .blog_side .inner em{display:block;border-bottom:1px solid #ccc;width:50%;}
@@ -399,18 +399,24 @@
 .blogs .blog_side .bg_wrap,
 .blogs .blog_side .bf_wrap,
 .blogs .blog_side .bd_wrap{margin-bottom:20px;border-bottom:1px solid #ccc;padding-bottom:20px;}
+.blogs .blog_side .bg_wrap h2,
+.blogs .blog_side .bf_wrap h2{padding-bottom:10px;}
 .blogs .blog_side .gadget_blog{float:left;width:48%;margin:0.5% 1%;}
 .blogs .blog_side .gadget_blog img{width:100%;height:150px;object-fit:cover;}
 .blogs .blog_side .tab-menu-wrap{width:100%;margin:auto;}
 .blogs .blog_side .tab-menu-wp{overflow:hidden;width:100%;}
-.blogs .blog_side .title-tab-menu{font-weight:bold;font-size:20px;padding-bottom:10px;text-transform:uppercase;}
+.blogs .blog_side .title-tab-menu{font-weight:bold;padding-bottom:10px;text-transform:uppercase;}
+.blogs .blog_side .bg_wrap h2 span,
+.blogs .blog_side .bf_wrap h2 span,
 .blogs .blog_side .title-tab-menu span{color:#3498db;}
 .blogs .blog_side .tab-menu-box a{text-decoration:none;display:block;color:#3d3d3d;}
 .blogs .blog_side .tab-menu-box .inner{float:left;width:67%;margin:-7px 0 0 3%;}
 .blogs .blog_side .tab-menu-box .inner p{margin-bottom:-10px;display:inline-block;text-overflow:ellipsis;white-space:nowrap;overflow:hidden;width:100%;}
 .blogs .blog_side .tab-menu-box .inner span{display:block;font-size:20px;color:#08f;font-weight:bold;}
-.blogs .blog_side .tab-menu-box .inner span em{margin-left:7px;display:inline-block;font-size:15px;text-decoration:line-through;color:#616161;}
-.blogs .blog_side .tab-menu-box .inner address{font-size:13px;color:#3d3d3d;}
+.blogs .blog_side .tab-menu-box .inner span em{border:none;margin-left:7px;display:inline-block;font-size:15px;text-decoration:line-through;color:#616161;}
+.blogs .blog_side .tab-menu-box .inner address{font-size:18px;color:#3d3d3d;border:1px solid #616161;text-align:center;}
+.blogs .blog_side .blog_side_more{margin-top:15px;float:right;}
+.blogs .blog_side .blog_side_more a{text-decoration:none;color:#fff;background:#08f;padding:5px 30px;display:block;}
 .blogs .blog_side .tab-menu-wp ul{list-style:none;padding:0;margin:0;}
 .blogs .blog_side .clear{clear:both}
 .blogs .blog_side .tab-menu-wp ul li{cursor:pointer;width:33.33%;text-align:center;display:block;color:rgba(255,255,255,.4);float:left;font-size:13px;padding-bottom:10px;color:#3d3d3d;}
@@ -419,6 +425,8 @@
 /*.blogs .blog_side .tab-menu-box:hover{background:rgba(0,0,0,.4);}*/
 .blogs .blog_side .tab-menu-img{float:left;width:30%;height:80px;overflow:hidden;object-fit:contain;}
 .blogs .blog_side .tab-menu-img img{width:100%;}
+.blogs .blog_side .tab-menu-img span{text-align:center;display:block;font-size:20px;}
+.blogs .blog_side .tab-menu-img em{display:block;}
 .blogs .blog_side .all-show{float:right;padding:10px 10px 0px 0;cursor:pointer;color:#3498db;font-size:15px;font-weight:bold;text-transform:uppercase;}
 /*End blogs_sidebar*/
 @media screen and (max-width:640px){
