--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -18,6 +18,196 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="60" data-price="7.21">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LIbMjS"><img src="https://m.media-amazon.com/images/I/81Fub7nmtnL._SR400,400_.jpg" alt="Mindbreaker Frankincense Essential Oil" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LIbMjS">Mindbreaker Frankincense Essential Oil, 100% Pure and Natural, Premium Quality Frankincense Oil, 4 fl. Oz</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.21</span><span class="ori_price">$18.99</span></address>
+      <p><span>Take <strong>60% off at $18.99</strong> with promo code: <strong>60RE87OG</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LIbMjS">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="45.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WaE0ry"><img src="https://m.media-amazon.com/images/I/819+vqJcqvL._SR400,400_.jpg" alt="PlantFusion Complete Plant Keto Blend" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WaE0ry">PlantFusion Complete Plant Keto Blend, 1:1 Fats + Protein, Plant Protein, MCT, Low Carb, No Sugar, Chocolate, 20 oz. Tub </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$45.59</span><span class="ori_price">$56.99</span></address>
+      <p><span>Take <strong>20% off at $56.99</strong> with promo code: <strong>20KETOBLEND</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WaE0ry">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="21.93">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Hm7Ot0"><img src="https://m.media-amazon.com/images/I/61cFUeWZTxL._SR400,400_.jpg" alt="ESSORT Back & Seat Cushion Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Hm7Ot0">ESSORT Back & Seat Cushion Set, 100% Memory Foam Orthopedic Coccyx Butt Cushion, Lumbar Support Pillow</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.93</span><span class="ori_price">$39.89</span></address>
+      <p><span>Take <strong>45% off at $39.89</strong> with promo code: <strong>45WZCV3O</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Hm7Ot0">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="9.06">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W1AwHM"><img src="https://m.media-amazon.com/images/I/71CmLuDs01L._SR400,400_.jpg" alt="Earth Vibes Hydrating Argan Oil Hair Mask Conditioner" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W1AwHM">Earth Vibes Hydrating Argan Oil Hair Mask Conditioner - Deep Conditioning & Moisturizing - Hair Repair Treatment For Dry Damaged Hair</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.06</span><span class="ori_price">$12.95</span></address>
+      <p><span>Take <strong>30% off at $12.95</strong> with promo code: <strong>30HAIRMASK</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W1AwHM">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="17.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EaXFNF"><img src="https://m.media-amazon.com/images/I/71ZhPbQnvOL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EaXFNF">Rodante Keratin Natural Leave In Conditioner | Hair Styling Products Blow Me Serum for Men w/Red Algae | Pro Vitamin B5 | No Alcohol & Parabens Made...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.95</span><span class="ori_price">$19.95</span></address>
+      <p><span>Take <strong>10% off at $19.95</strong> with promo code: <strong>10RODANTES</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EaXFNF">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="34" data-price="19.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VG05P2"><img src="https://m.media-amazon.com/images/I/61GKOMOl9fL._SR400,400_.jpg" alt="WORKPRO 7-piece Ratcheting Combination Wrench Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>34% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VG05P2">WORKPRO 7-piece Ratcheting Combination Wrench Set, Metric 10-16 mm, with Compact Organizer Rack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.79</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>34% off at $29.99</strong> with promo code: <strong>3448TLKN</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VG05P2">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="14.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Hl9pPH"><img src="https://m.media-amazon.com/images/I/71mGH4wOe3L._SR400,400_.jpg" alt="HELLOYEE Full Face Snorkel Mask" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Hl9pPH">HELLOYEE Full Face Snorkel Mask for Adults Kids Panoramic View Snorkeling Mask Free Breathing Anti-Fog Anti-Leak Design with Detachable Camera Mount</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.69</span><span class="ori_price">$29.98</span></address>
+      <p><span>Take <strong>51% off at $29.98</strong> with promo code: <strong>51F2KHEX</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Hl9pPH">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="66.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LGmoQ4"><img src="https://m.media-amazon.com/images/I/713VRMyZhDL._SR400,400_.jpg" alt="Meagle 20V MAX Brushless Cordless Drill Driver" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LGmoQ4">Meagle 20V MAX Brushless Cordless Drill Driver with Hammer Function - 1/2" Chuck - 2.0Ah Lithium-Ion Battery - 2 Speed 530 In-lbs Max Torque - 21 + 3 Setting</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$66.59</span><span class="ori_price">$110.99</span></address>
+      <p><span>Take <strong>40% off at $110.99</strong> with promo code: <strong>40ARRUX2</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LGmoQ4">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="30.10">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HkaV4E"><img src="https://m.media-amazon.com/images/I/81+YT4lfI3L._SR400,400_.jpg" alt="Schisandra chinensis Supplement" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HkaV4E">Schisandra chinensis Supplement – Wild Siberian Herbal Extracts for Mental Focus, Sharp Brain Functions, Optimized Energy Metabolism, Liver Detox</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30.10</span><span class="ori_price">$33.45</span></address>
+      <p><span>Take <strong>10% off at $33.45</strong> with promo code: <strong>10SCHISANDRA</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HkaV4E">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VAS5yO"><img src="https://m.media-amazon.com/images/I/71jLYxm-QIL._SR400,400_.jpg" alt="Swisse Ultiboost Hair Skin Nails Liquid Supplement" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VAS5yO">Swisse Ultiboost Hair Skin Nails Liquid Supplement - Premium Beauty Formula - Supports Collagen Production</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span></address>
+      <p><span>Take <strong>50% off at $24.99</strong> with promo code: <strong>50SWISSE</strong></span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VAS5yO">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="6.49">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2w4MZLT"><img src="https://m.media-amazon.com/images/I/71Xf5860gRL._SR400,400_.jpg" alt="UDISON Portable Bluetooth Speaker" /></a>
