--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -62,7 +62,7 @@
 .on_gadgets .card_wrap .card-header,
 .on_gadgets .card_wrap .card-body{position:relative;padding:5px;font-family: 'Montserrat', sans-serif;font-weight:100;}
 .on_gadgets .card_wrap .card-body span{border-bottom:1px solid #ccc;width:55%;display:inline;color:#616161;text-transform:uppercase;}
-.on_gadgets .card_wrap .card-body .to_featured{float:right;margin-right:1%;text-decoration:none;color:#616161;}
+.on_gadgets .card_wrap .card-body .to_featured{float:right;margin-right:1%;text-decoration:none;color:#fff;background:#ff4d4d;border-radius:10px;padding:0 10px;}
 .on_gadgets .card_wrap .card-body h4{margin-top:15px;line-height:1.2;font-weight:100;}
 .on_gadgets .card_wrap .card-body h4 a{text-decoration:none;color:#616161;}
 .on_gadgets .card_wrap .card-body p{margin:10px 0;font-weight:300;color:#616161;}
